Rename test methods to lower camel case in ExportOperationExecutorTest
Changed all test method names to follow lower camel case convention
and removed abbreviations:
- test_until_param → testUntilParameter
- provide_until_param → provideUntilParameter
- elements_param_and_type_param_only_return_relevant_resources_and_elements → testElementsParameterAndTypeParameterOnlyReturnRelevantResourcesAndElements
- local_element_in_elements_param_is_returned → testLocalElementInElementsParameterIsReturned
- global_element_in_elements_param_is_returned → testGlobalElementInElementsParameterIsReturned
- local_and_global_elements_in_elements_param_are_returned → testLocalAndGlobalElementsInElementsParameterAreReturned
- local_element_in_elements_param_other_elements_are_not_returned → testLocalElementInElementsParameterOtherElementsAreNotReturned
- mandatory_elements_are_always_returned → testMandatoryElementsAreAlwaysReturned
- returned_fhir_resource_has_subsetted_tag → testReturnedFhirResourceHasSubsettedTag
- returned_fhir_resource_does_not_have_subsetted_tag_if_no_elements_param → testReturnedFhirResourceDoesNotHaveSubsettedTagIfNoElementsParameter
- existing_meta_tag_remains_when_subsetted_tag_is_added → testExistingMetaTagRemainsWhenSubsettedTagIsAdded
- other_existing_meta_values_remain_when_subsetted_tag_is_added → testOtherExistingMetaValuesRemainWhenSubsettedTagIsAdded
- create_exec → createExecutor
- test_since_parameter → testSinceParameter
- provide_since_params → provideSinceParameters
- test_export_executor → testExportExecutor
- provide_export_executor_values → provideExportExecutorValues
- assert_response → assertResponse